# rigi-sim

./: .gitmodules  CMakeLists.txt  README.md
dependencies/submodules/: CMakeLists.txt
include/: delta.h  info.h  logger.h  rigisim_application.h  utils.h
src/: logger.cpp  logs.txt  main.cpp  rigisim_application.cpp
